correct alignment of buttons-container in index.html

--- a/project/static/css/global.css
+++ b/project/static/css/global.css
@@ -373,7 +373,7 @@ a {
 .buttons-container {
     flex: 1 1 100%;
     display: flex;
-    justify-content: flex-end;
+    justify-content: flex-start;
     flex-direction: row;
     margin-bottom: .3rem;
     align-items: baseline;
